# yotta_financial_sentiment_API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  nlp.py
