[tool.poetry]
name = "newsmodel"
version = "0.1.0"
description = "Model for sentiment analysis of financial headlines"
authors = ["Jerome Blin"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/financial-sentiment/newsmodel"
repository = "https://gitlab.com/financial-sentiment/newsmodel"
documentation = ""
keywords = ["webscraping", "news"]
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
transformers = "^4.1.1"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 100
